# smart_blog

./: pyproject.toml
src/: db.sqlite3
src/api/auth/: permissions.py  serializers.py
src/api/v1/: urls.py
src/api/v1/blogs/: serializers.py  views.py
src/apps/blogs/: admin.py  models.py
src/apps/blogs/migrations/: 0001_initial.py  0002_initial.py
src/apps/recommendation_system/: apps.py  services.py  tests.py
src/apps/users/: models.py
src/apps/users/migrations/: 0001_initial.py
src/blogs/: admin.py  models.py
src/config/: settings.py  urls.py
src/congig/: settings.py
