[tool.poetry]
name = "smart-blog"
version = "0.1.0"
description = ""
authors = ["Pedriq <1pedre.off@gmail.com>"]
readme = "README.md"
packages = [{include = "smart_blog"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
